assets/styles.css
/* ... */
/* Large Desktop - 1300px */
@media only screen and (min-width: 81.25rem) {
  #cs-navigation .cs-social {
    display: flex;
  }
}


/* ============= HER0 =============== */
.h1-text {
    font-size: clamp(45px, 5vw + 10px, 65px);
    line-height: 1.3;
    font-weight: 700;
}

.hero-h1-text {
  font-size: clamp(55px, 5vw + 10px, 65px);
  line-height: 1.3;
  font-weight: 700;
}

.p-text {
    font-size: 22px;
    line-height: 1.5;
    font-weight: 400;
}

/* .highlight{
  border-bottom: 3px solid rgba(250, 100, 0, 0.28);
} */

.highlight {
  position: relative;
  display: inline-block;
  z-index: 0;
}

.highlight::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 10%;
  height: 25%;
  background-color: rgba(250, 100, 0, 0.28);
  z-index: -1;
}

@media (max-width: 991px) {
  .hero-img {
      max-height: 500px;
      max-width: auto;
  }
  
}


@media (min-width: 992px) {
    .hero-img {
        max-height: 600px;
        max-width: auto;
    }
    
}

@keyframes flip {
  0% {
    transform: rotateY(0deg);
  }
  50% {
    transform: rotateY(180deg);
  }
  100% {
    transform: rotateY(360deg);
  }
}


.flipping-svg {
  animation: flip 5s infinite;
  transform-origin: center;
}

/* ========== SERVICES =========== */
.section-padding {
    /* padding: 3rem 1rem; */
    padding: 3rem 1rem 5rem 1rem;
}

.icon-wrapper {
    width: 45px;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.services .mx-width {
    max-width: 250px;
}

@media screen and (max-width: 992px) {
    .services .mx-width {
        max-width: 100%;
    }
}

.services h4 {
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
}

.services h2 {
    font-size: 35px;
    line-height: 1.2;
    font-weight: 700;
}

.services h3 {
    font-size: 24px;
    line-height: 1.2;
    font-weight: 700;
    padding-top: 1.2rem;
    padding-bottom: 1rem;
}

.services p {
    font-size: 18px;
    line-height: 1.4;
    font-weight: 400;
}

.about-img {
    border-radius: 15px;
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* ======= ABOUT ME ========= */
@media screen and (min-width: 992px) {
    .about-img {
        max-width: 480px!important;
        /* width: 480px; */
        height: auto;
    }
}

.svg-about_container {
    background-color: var(--light-gray);
    width: 68px;
    height: auto;
    margin: 20px;
    border-radius: 15px;
}

.svg-about {
    width: 34px;
    height: 34px;
    fill: var(--text-color);
}


/* ========= STEPS =============== */

.circle-number {
  display: block;
  border-radius: 100%;
  width: 80px;
  height: 80px;
  background-color: var(--pink-bg);
  border: 1px solid var(--dark-red);
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  position: relative;
}

/* @media (min-width: 992px) {
  .row .col:nth-child(-n+3) .circle-number::after {
    content: "\f178";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    position: absolute;
    right: -177%;
    top: 50%;
    transform: scale(2, 1) translateY(-50%);
    font-size: 20px;
    color: var(--dark-red);
  }
} */

@media (min-width: 992px) and (max-width: 1400px) {
  .row .col:nth-child(-n+3) .circle-number::after {
    content: "";
    position: absolute;
    right: -177%; /* Adjust as needed */
    top: 50%;
    transform: translateY(-50%);
    width: 104px;
    height: 16px;
    background-image: url("/assets/images/Arrow-4.svg");
    background-repeat: no-repeat;
    background-size: contain;
  }
}

@media (min-width: 1401px) {
  .row .col:nth-child(-n+3) .circle-number::after {
    content: "";
    position: absolute;
    right: -223%; /* Adjust as needed */
    top: 50%;
    transform: translateY(-50%);
    width: 104px;
    height: 16px;
    background-image: url("/assets/images/Arrow-4.svg");
    background-repeat: no-repeat;
    background-size: contain;
  }
}

.full-width-line {
  display: block;
  position: absolute;
  width: 100%;
  left: 0;
  top: 50%;
  z-index: -1;
}

.full-width-line::after {
  content: "";
  border-bottom: 1px solid var(--dark-red);
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
/* ... */

